Force presence of scrollbar to fix jumping
Some pages are long enough to scroll, some pages aren't.  Switching
between the two makes the layout "jump", as the pages-with-scrollbar
are narrower.

--- a/hashed-static/style.css
+++ b/hashed-static/style.css
@@ -60,6 +60,7 @@ html {
     min-height: 100%;
     font-size: 18px;
     counter-reset: sidenote-counter;
+    overflow-y: scroll;
 }
 
 body {
